# IntegerFactorization

./: CMakeLists.txt  FactorizationClient.cpp  FactorizationClient.h  IntegerFactorizationTask.cpp  IntegerFactorizationTask.h  ServerConfig.cpp  ServerConfig.h  main.cpp  uuid.h
